--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
 
     <!-- Paste BOTH strings as required -->
-    <string name="back4app_app_id"></string>
-    <string name="back4app_client_key"></string>
+    <string name="back4app_app_id">WrN1FS869TR0D2tLcok2klFOeBJpPFHnhlJyq8Om</string>
+    <string name="back4app_client_key">kiWyDU78NfNeHFmJtDLj7xofZIhDe8XucdcQSbg6</string>
 </resources>
